--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,6 @@
 plugins {
     id 'com.android.application'
-    id 'org.jetbrains.kotlin.android'
+    // REMOVE: id 'org.jetbrains.kotlin.android'
 }
 
 android {
@@ -23,21 +23,34 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
-    kotlinOptions {
-        jvmTarget = '1.8'
-    }
+
+    // REMOVE THIS ENTIRE BLOCK:
+    // kotlinOptions {
+    //     jvmTarget = '1.8'
+    // }
 }
 
 dependencies {
-    implementation "com.google.android.material:material:1.12.0"
-    implementation 'androidx.core:core-ktx:1.15.0'
-    implementation "androidx.activity:activity:1.9.3"
-    implementation "androidx.appcompat:appcompat:1.7.0"
+    implementation 'com.google.android.material:material:1.12.0'
+    implementation 'androidx.appcompat:appcompat:1.7.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.2.0'
+
+    // Add these dependencies:
+    implementation 'androidx.viewpager2:viewpager2:1.0.0'
+    implementation 'androidx.fragment:fragment:1.6.2'
+    implementation 'androidx.cardview:cardview:1.0.0'
+
+    // REMOVE: implementation 'androidx.core:core-ktx:1.15.0'
+    // REMOVE: implementation "androidx.activity:activity:1.9.3" (we'll use a different version)
+
+    // Add Activity dependency (Java compatible version):
+    implementation 'androidx.activity:activity:1.8.0'
+
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.2.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.6.1'
