--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,11 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.CAMERA" />
-
-    <!-- For Android 13+ -->
     <uses-permission android:name="android.permission.READ_MEDIA_IMAGES" />
-
-    <!-- For older Android versions -->
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"
         android:maxSdkVersion="32" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"
@@ -34,15 +30,15 @@
         </activity>
 
         <activity
-            android:name=".SignUpActivity"
+            android:name=".signup"
             android:exported="false" />
 
         <activity
-            android:name=".ForgotPasswordActivity"
+            android:name=".forgotpassword"
             android:exported="false" />
 
         <activity
-            android:name=".MainApp"
+            android:name=".mainapp"
             android:exported="false" />
 
         <activity
