--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,7 @@
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
     <uses-permission android:name="android.permission.READ_MEDIA_IMAGES" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE_DATA_SYNC" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"
         android:maxSdkVersion="35" />
 
@@ -34,12 +35,6 @@
     android:usesCleartextTraffic="true"
 
     tools:targetApi="35">
-
-    <service
-        android:name=".notif"
-        android:foregroundServiceType="shortService"
-        android:enabled="true"
-        android:exported="false" />
 
     <activity
         android:name=".MainActivity"
@@ -70,14 +65,14 @@
         android:name=".itemdetail"
         android:exported="false" />
 
+        <activity
+            android:name=".outfitdetail"
+            android:exported="false" />
+
     <activity
         android:name=".addoutfit"
         android:exported="false" />
 
-    <activity
-        android:name=".outfitdetail"
-        android:theme="@style/Theme.AppCompat.Light.NoActionBar"
-        android:exported="false" />
 
     <provider
         android:name="androidx.core.content.FileProvider"
